--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ footer p {
 
 <script>
   // ⚡ Thông tin WiFi cố định (giống ESP)
-  const WIFI_USER = "Itel";
-  const WIFI_PASS = "11112222";
+  const WIFI_USER = "admin";
+  const WIFI_PASS = "admin@2025";
 
   function doLogin(){
     const u = document.getElementById("ssid").value;
@@ -312,3 +312,4 @@ footer p {
 </script>
 </body>
 </html>
+
