--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ footer p {
   </div>
 <footer>
   <p>© 2025 Chuyên đề Tốt nghiệp Đại học Nha Trang 2025</p>
-  <p>GVHD: Nguyễn Minh Tuấn</p>
+  <p>GVHD: Tiến sĩ - Nguyễn Thanh Tuấn</p>
   <p>SVHT: Bạch Văn Toàn | 24DT1133 & Đặng Hoàng Nhã | 24DT1120</p>
 </footer>
 
@@ -312,4 +312,5 @@ footer p {
 </script>
 </body>
 </html>
+
 
