--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0; padding:5px; 
+      margin:0; padding:5px;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial;
       color:var(--text);
       background:
@@ -27,8 +27,20 @@
         radial-gradient(1200px 600px at 100% 0%, #0e6b91 0%, transparent 40%),
         var(--bg);
     }
-    .container{ max-width:980px; margin:0 auto; padding-bottom: 75px; display:none; } // padding-bottom Tao khoan trong cho footer
+    .container{ max-width:980px; margin:0 auto; padding-bottom: 75px; display:none; }
     h3{ margin:0 0 18px; font-size:28px; letter-spacing:.2px; }
+
+    /* Thêm style cho badge trạng thái online/offline */
+    .badge.offline{
+      background: rgba(255, 91, 110, 0.12);
+      border-color: rgba(255, 91, 110, 0.35);
+      color: var(--danger);
+    }
+    .badge.online{
+      background: rgba(41, 192, 126, 0.15);
+      border-color: rgba(41, 192, 126, 0.35);
+      color: var(--success);
+    }
 
     /* Stats cards */
     .stats{ display:grid; grid-template-columns: repeat(5, 1fr); gap:12px; margin-bottom:14px; }
@@ -60,6 +72,14 @@
       box-shadow: var(--shadow);
     }
     button:hover{ transform: translateY(-1px);}
+    /* Hiệu ứng khi các nút bị vô hiệu hóa */
+    button:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+      transform: none;
+      box-shadow: none;
+    }
+
     .btn-primary{ background: linear-gradient(180deg, #3478f6, #2463e7); border-color: transparent;}
     .btn-danger{ background: linear-gradient(180deg, #ff6b7a, #e54259); border-color: transparent;}
     .btn-secondary{ background: linear-gradient(180deg, #2b335e, #232a50);}
@@ -96,34 +116,31 @@
     .login-box button{width:100%; margin-top:10px;}
     #login-msg{color:var(--danger); font-size:13px; margin-top:8px;}
 
-    
-footer {
-  position: fixed;
-  bottom: 0;           /* luôn sát đáy màn hình */
-  left: 50%;           /* căn giữa theo container */
-  transform: translateX(-50%);
-  max-width: 980px;    /* ngang bằng container/table */
-  width: 100%;
-  text-align: center;
-  padding: 8px 0;     /* chiều cao footer */
-  background-color: #121834;
-  color: #eee8e8;
-  font-size: 13px;
-  border-radius: 8px;
-  box-shadow: var(--shadow);
-    line-height: 1.3;       /* các dòng sát nhau hơn */
-}
-footer p {
-  margin: 2px 0;          /* giảm khoảng cách giữa các <p> */
-}
 
-
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 980px;
+      width: 100%;
+      text-align: center;
+      padding: 8px 0;
+      background-color: #121834;
+      color: #eee8e8;
+      font-size: 13px;
+      border-radius: 8px;
+      box-shadow: var(--shadow);
+      line-height: 1.3;
+    }
+    footer p {
+      margin: 2px 0;
+    }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <!-- Login overlay -->
   <div class="login-overlay" id="loginScreen">
     <div class="login-box">
       <h2>WiFi Login</h2>
@@ -135,7 +152,11 @@ footer p {
   </div>
 
   <div class="container" id="mainApp">
-    <h3>ESP8266 Monitor & Control (ĐH Nha Trang 2025)<button class="btn-outline" onclick="logout()" style="float:right;">Logout</button></h3>
+    <h3 style="display:flex; justify-content:space-between; align-items:center;">
+      ESP8266 Monitor & Control (ĐH Nha Trang 2025)
+      <span id="status" class="badge">Checking...</span>
+      <button class="btn-outline" onclick="logout()" style="float:right;">Logout</button>
+    </h3>
 
     <div class="stats">
       <div class="stat"><div class="label">Temp</div><div class="value"><span id="temp">-</span> °C</div></div>
@@ -179,138 +200,236 @@ footer p {
   <p>SVHT: Bạch Văn Toàn | 24DT1133 & Đặng Hoàng Nhã | 24DT1120</p>
 </footer>
 
-
 <script>
-  // ⚡ Thông tin WiFi cố định (giống ESP)
-  const WIFI_USER = "admin";
-  const WIFI_PASS = "admin@2025";
+//Thông tin WiFi cố định (giống ESP)
+const WIFI_USER = "admin";
+const WIFI_PASS = "admin@2025";
 
-  function doLogin(){
-    const u = document.getElementById("ssid").value;
-    const p = document.getElementById("password").value;
-    if(u===WIFI_USER && p===WIFI_PASS){
-      localStorage.setItem("logged","1");
-      document.getElementById("loginScreen").style.display="none";
-      document.getElementById("mainApp").style.display="block";
-    }else{
-      document.getElementById("login-msg").innerText="Sai SSID hoặc mật khẩu!";
-    }
+function doLogin(){
+  const u = document.getElementById("ssid").value;
+  const p = document.getElementById("password").value;
+  if(u===WIFI_USER && p===WIFI_PASS){
+    localStorage.setItem("logged","1");
+    document.getElementById("loginScreen").style.display="none";
+    document.getElementById("mainApp").style.display="block";
+  }else{
+    document.getElementById("login-msg").innerText="Sai SSID hoặc mật khẩu!";
   }
-  function logout(){
-    localStorage.removeItem("logged");
-    location.reload();
+}
+function logout(){
+  localStorage.removeItem("logged");
+  location.reload();
+}
+window.onload = ()=>{
+  if(localStorage.getItem("logged")==="1"){
+    document.getElementById("loginScreen").style.display="none";
+    document.getElementById("mainApp").style.display="block";
   }
-  window.onload = ()=>{
-    if(localStorage.getItem("logged")==="1"){
-      document.getElementById("loginScreen").style.display="none";
-      document.getElementById("mainApp").style.display="block";
-    }
-  };
+};
 
-  // Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyBK3nLehgMJYXVHdEtWt7YwWifGYHm7fig",
-    authDomain: "esp8266-dhnt2025.firebaseapp.com",
-    databaseURL: "https://esp8266-dhnt2025-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "esp8266-dhnt2025"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBK3nLehgMJYXVHdEtWt7YwWifGYHm7fig",
+  authDomain: "esp8266-dhnt2025.firebaseapp.com",
+  databaseURL: "https://esp8266-dhnt2025-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "esp8266-dhnt2025"
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-  const device = "esp01";
-  let lastCmdId = 0;
+const device = "esp01";
+let lastCmdId = 0;
+const ONLINE_TIMEOUT = 45000; // 45 giây, lớn hơn thời gian gửi heartbeat từ ESP (30s)
+const controlButtons = document.querySelectorAll('.actions button:not(.btn-outline)');
+const statusEl = document.getElementById("status");
 
-  db.ref("status/" + device + "/lastCmdId").once("value").then(snap => {
-    lastCmdId = snap.val() || 0;
+// Khai báo biến onlineTimer ở đây để nó có phạm vi toàn cục
+   let onlineTimer; 
+// Hàm để vô hiệu hóa/kích hoạt các nút và cập nhật trạng thái
+function toggleUI(online) {
+  statusEl.innerText = online ? "Online" : "Offline";
+  statusEl.className = "badge " + (online ? "online" : "offline");
+  controlButtons.forEach(btn => {
+    btn.disabled = !online;
   });
+}
 
-  db.ref("sensors/" + device).on("value", snap => {
-    const d = snap.val() || {};
-    document.getElementById("temp").innerText = d.temperature ?? "-";
-    document.getElementById("hum").innerText = d.humidity ?? "-";
-    document.getElementById("soil").innerText = d.soil ?? "-";
-  });
 
-  db.ref("status/" + device).on("value", snap => {
-    const s = snap.val() || {};
-    const pumpEl = document.getElementById("pump");
-    const modeEl = document.getElementById("mode");
 
-    pumpEl.innerText = s.pump === true ? "ON" : "OFF";
-    modeEl.innerText = s.mode || "-";
+// Lắng nghe sự thay đổi của trạng thái online/offline từ ESP
+db.ref("presence/" + device + "/online").on("value", snap => {
+  const lastHeartbeat = snap.val() || 0;
+  const isOnline = (Date.now() - lastHeartbeat) < ONLINE_TIMEOUT;
 
-    pumpEl.className = "badge " + (s.pump === true ? "on" : "off");
-    modeEl.className = "badge " + ((s.mode || "").toLowerCase());
+  // Cập nhật UI ngay lập tức
+  toggleUI(isOnline);
 
-    if (s.lastCmdId != null) lastCmdId = s.lastCmdId;
-  });
+  // Xóa timer cũ nếu có và thiết lập timer mới
+  clearTimeout(onlineTimer);
+  onlineTimer = setTimeout(() => {
+    toggleUI(false);
+  }, Math.max(0, ONLINE_TIMEOUT - (Date.now() - lastHeartbeat)));
+});
 
-  db.ref("logs/" + device).limitToLast(20).on("value", snap => {
-    const logs = snap.val() || {};
-    const tbody = document.getElementById("logTable");
-    tbody.innerHTML = "";
 
-    const logArray = Object.keys(logs).map(k => ({ ts: k, ...logs[k] }));
-    logArray.sort((a,b) => b.ts - a.ts);
+// Lắng nghe các thay đổi khác
+// === CẢI THIỆN LỖI ĐỒNG BỘ lastCmdId ===
 
-    logArray.forEach(log => {
-      const date = new Date(log.ts * 1000);
-      const dateStr = date.toLocaleString("vi-VN", { hour12: false });
-      const row = document.createElement("tr");
-      row.innerHTML = `
-        <td>${dateStr}</td>
-        <td>${log.temp ?? "-"}</td>
-        <td>${log.hum ?? "-"}</td>
-        <td>${log.soil ?? "-"}</td>
-        <td>${log.pump ?? "-"}</td>
-        <td>${log.mode ?? "-"}</td>
-        <td>${log.note ?? "-"}</td>
-      `;
-      tbody.appendChild(row);
-    });
+db.ref("status/" + device).on("value", snap => {
 
-    if (logArray.length === 0) {
-      tbody.innerHTML = "<tr><td colspan='7'>No logs</td></tr>";
-    }
-  });
+  const s = snap.val() || {};
 
-  function sendCmd(pumpState) {
-    lastCmdId++;
-    db.ref("command/" + device).set({ 
-      cmdId: lastCmdId, 
-      pump: pumpState, 
-      mode: "Manual" 
-    }).catch(err => console.error("Firebase write error:", err));
-  }
+  const pumpEl = document.getElementById("pump");
 
-  function setMode(modeState) {
-    lastCmdId++;
-    db.ref("command/" + device).set({ 
-      cmdId: lastCmdId, 
-      pump: "", 
-      mode: modeState 
-    }).catch(err => console.error("Firebase write error:", err));
-  }
+  const modeEl = document.getElementById("mode");
 
-  function exportLogCSV() {
-    const logsRef = db.ref("logs/" + device);
-    logsRef.once("value").then(snap => {
-      const logs = snap.val() || {};
-      let csv = "Time;Temp;Hum;Soil;Pump;Mode;Note\n";
-      Object.keys(logs).sort().forEach(ts => {
-        const log = logs[ts];
-        const date = new Date(ts * 1000).toLocaleString("vi-VN",{hour12:false});
-        csv += `${date};${log.temp ?? "-"};${log.hum ?? "-"};${log.soil ?? "-"};${log.pump ?? "-"};${log.mode ?? "-"};${log.note ?? "-"}\n`;
-      });
-      const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = `ESP_logs_${device}.csv`;
-      link.click();
-    }).catch(err => console.error(err));
-  }
+
+
+  pumpEl.innerText = s.pump === true ? "ON" : "OFF";
+
+  modeEl.innerText = s.mode || "-";
+
+
+
+  pumpEl.className = "badge " + (s.pump === true ? "on" : "off");
+
+  modeEl.className = "badge " + ((s.mode || "").toLowerCase());
+
+
+
+  // Đồng bộ lastCmdId mỗi khi có thay đổi trên Firebase
+
+  if (s.lastCmdId != null) {
+
+    lastCmdId = s.lastCmdId;
+
+  }
+
+});// Lắng nghe các thay đổi khác
+
+db.ref("sensors/" + device).on("value", snap => {
+
+  const d = snap.val() || {};
+
+  document.getElementById("temp").innerText = d.temperature ?? "-";
+
+  document.getElementById("hum").innerText = d.humidity ?? "-";
+
+  document.getElementById("soil").innerText = d.soil ?? "-";
+
+});
+
+
+
+db.ref("logs/" + device).limitToLast(20).on("value", snap => {
+
+  const logs = snap.val() || {};
+
+  const tbody = document.getElementById("logTable");
+
+  tbody.innerHTML = "";
+
+
+
+  const logArray = Object.keys(logs).map(k => ({ ts: k, ...logs[k] }));
+
+  logArray.sort((a,b) => b.ts - a.ts);
+
+
+
+  logArray.forEach(log => {
+
+    const date = new Date(log.ts * 1000);
+
+    const dateStr = date.toLocaleString("vi-VN", { hour12: false });
+
+    const row = document.createElement("tr");
+
+    row.innerHTML = `
+      <td>${dateStr}</td>
+      <td>${log.temp ?? "-"}</td>
+      <td>${log.hum ?? "-"}</td>
+      <td>${log.soil ?? "-"}</td>
+      <td>${log.pump ?? "-"}</td>
+      <td>${log.mode ?? "-"}</td>
+      <td>${log.note ?? "-"}</td>
+    `;
+    tbody.appendChild(row);
+
+  });
+
+
+
+  if (logArray.length === 0) {
+
+    tbody.innerHTML = "<tr><td colspan='7'>No logs</td></tr>";
+
+  }
+
+});function sendCmd(pumpState) {
+
+  // Tăng lastCmdId trước khi gửi lệnh
+
+  lastCmdId++;
+
+  db.ref("command/" + device).set({
+
+    cmdId: lastCmdId,
+
+    pump: pumpState,
+
+    mode: "Manual"
+
+  }).catch(err => console.error("Firebase write error:", err));
+
+}function setMode(modeState) {
+
+  // Tăng lastCmdId trước khi gửi lệnh
+
+  lastCmdId++;
+
+  db.ref("command/" + device).set({
+
+    cmdId: lastCmdId,
+
+    pump: "",
+
+    mode: modeState
+
+  }).catch(err => console.error("Firebase write error:", err));
+
+}function exportLogCSV() {
+
+  const logsRef = db.ref("logs/" + device);
+
+  logsRef.once("value").then(snap => {
+
+    const logs = snap.val() || {};
+
+    let csv = "Time;Temp;Hum;Soil;Pump;Mode;Note\n";
+
+    Object.keys(logs).sort().forEach(ts => {
+
+      const log = logs[ts];
+
+      const date = new Date(ts * 1000).toLocaleString("vi-VN",{hour12:false});
+
+      csv += `${date};${log.temp ?? "-"};${log.hum ?? "-"};${log.soil ?? "-"};${log.pump ?? "-"};${log.mode ?? "-"};${log.note ?? "-"}\n`;
+
+    });
+
+    const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+
+    const link = document.createElement("a");
+
+    link.href = URL.createObjectURL(blob);
+
+    link.download = `ESP_logs_${device}.csv`;
+
+    link.click();
+
+  }).catch(err => console.error(err));
+}
 </script>
 </body>
 </html>
-
-
